# ods-mlops-2024

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Snakefile  Snakefile.lakefs  _quarto.yml  dvc-compare-models.ipynb  dvc.yaml  frontend.py  log_settings.yaml  main.py  params.yaml  preprocess.py  pyproject.toml  read_data.py  res.json  sms_cls.py  sms_preprocess.py  sms_split_data.py  train_model.py
.dvc/: config
.github/: CONTRIBUTING.md
.github/workflows/: cml-autoreport.yaml  dvc-pipeline.yaml  github-pages.yaml  image-build.yaml  lint.yaml  package-build.yaml  package-ci.yaml
compose/: docker-compose.clearml.yaml  docker-compose.lakefs.yaml  docker-compose.web.yaml
compose/clearml/config/: apiserver.conf
configs/: convert_data.yaml  preprocess.yaml  train.yaml
configs/data_convert/: parquet.yaml
configs/data_info/: base.yaml  numeric_only.yaml
configs/model/: log_reg.yaml  random_forest.yaml
configs/split_info/: base.yaml
configs_sms/: train.yaml
configs_sms/data/: sms.yaml
configs_sms/exp_logger/: clearml.yaml  mlflow.yaml
configs_sms/model/: sklearn_dummy.yaml  sklearn_est.yaml  sklearn_forest.yaml  sklearn_logreg.yaml  sklearn_naive_bayes.yaml
configs_sms/model/inner_estimator/: dummy.yaml  forest.yaml  log_reg.yaml
configs_sms/split_info/: base.yaml
configs_sms/vectorizer/: count.yaml  tfidf.yaml  tsvd.yaml
data/dvc/: .gitignore
data/dvc/metrics/: .gitignore
data/dvc/metrics/train/: .gitignore
data/dvc/metrics/val/: .gitignore
data/dvc/raw/: .gitignore  sentiment+labelled+sentences.zip.dvc  sms+spam+collection.zip.dvc
dvc_templates/: conf.json
info/: hyphothesis.md  kubernetes.md
kubernetes/: deploy.yaml
ods_mlops/configs/: __init__.py  data_config.py  hydra_config.py  pipeline.py  preprocessing.py  train.py
ods_mlops/eda/plotting/: __init__.py  heatmap.py  save_fig.py  scatter.py
ods_mlops/exp_loggers/: base_logger.py  clearml.py  mlflow.py
ods_mlops/sk_ext/: __init__.py  binary_encoder.py
ods_mlops/sms_cls/: extract_data.py  model.py  vectorizer.py
ods_mlops/web/: app.py  settings.py  worker.py
ods_mlops/web/download_model/: __main__.py
ods_mlops/web/models/: __init__.py  sentiment.py
ods_mlops/web/routes/: sentiment.py
report/: snake.html
tests/: test_extract_data.py  test_log.py
